Change introduction of readme.

--- a/README.html
+++ b/README.html
@@ -239,8 +239,10 @@ sup,sub,a.footnote {
   <div id="wrapper">
       <h1 id="readme">README</h1>
 
-<p>Since you&#8217;re reading this, you have successfully cloned the webdriver-testsuite
-repository.</p>
+<p>Clone this repo:</p>
+
+<pre><code>git clone git://github.com/Weltraumschaf/cacert-frontendtests.git
+</code></pre>
 
 <h2 id="nextstepstogetstarted">Next steps to get started</h2>
 
